LPD-X Set Java executable path if override value is present. Currently, it only uses default system's "java". Therefore, when we use "junit.jvm.override" and "junit.jvm.override.version" to override local java to test for other jdk versions, @NewEnv is still set with the system JDK causing a mismatch in jdk versions in testing. By setting the Java executable path, we are telling new JVM to use the same version of java that junit is currently running on.